# junoNATIVE

./: .eslintrc.js  .gitignore  AGENTS.md  App.tsx  CMakeLists.txt  README.md  app.json  eslint.config.js  index.js  package-lock.json  package.json
.github/workflows/: Ios-test.yml  Ios.yml  build_android.yml  build_ios.yml  dsp_matrix.yml  ios_ci_release.yml  ios_forensic_analysis.yml  ios_manual_deploy.yml  ios_testflight.yml  midi_latency.yml  release.yml  unit_tests.yml  verify_appstore_connect.yml
Juno-Native/: app.json  babel.config.js  design_guidelines.md  drizzle.config.ts  eslint.config.js  jest.config.js  package-lock.json  package.json  replit.md  tsconfig.json
Juno-Native/.expo/: README.md  devices.json
Juno-Native/__tests__/: math.test.ts
Juno-Native/client/: App.tsx  index.js
Juno-Native/client/components/: Button.tsx  Card.tsx  ChorusSelector.tsx  ControlPanel.tsx  ErrorBoundary.tsx  ErrorFallback.tsx  HeaderTitle.tsx  Keyboard.tsx  KeyboardAwareScrollViewCompat.tsx  Knob.tsx  PatchCard.tsx  Spacer.tsx  SynthSwitch.tsx  ThemedText.tsx  ThemedView.tsx  WaveformDisplay.tsx
Juno-Native/client/constants/: theme.ts
Juno-Native/client/contexts/: SynthContext.tsx
Juno-Native/client/hooks/: useColorScheme.ts  useColorScheme.web.ts  useScreenOptions.ts  useSynthEngine.ts  useTheme.ts
Juno-Native/client/lib/: WebAudioSynth.ts  query-client.ts
Juno-Native/client/navigation/: MainTabNavigator.tsx  RootStackNavigator.tsx
Juno-Native/client/screens/: PatchesScreen.tsx  SettingsScreen.tsx  SynthesizerScreen.tsx
Juno-Native/scripts/: build.js
Juno-Native/server/: index.ts  routes.ts  storage.ts
Juno-Native/server/templates/: landing-page.html
Juno-Native/shared/: schema.ts
Juno-Native/shared/utils/: math.ts
cpp/: JunoEngine.hpp
cpp/dsp/: BBDChorus.hpp  IR3109OTA.hpp  ParameterScaler.hpp  PowerSupplySag.hpp
cpp/engine/: JunoEngine.hpp
cpp/parser/: Juno106PatchParser.hpp
docs/: codebase-overview.md  comment-separators.md
fastlane/: Appfile  Fastfile
ios/: JunoAudioEngine.h  JunoAudioEngine.mm  JunoNativeApp.yml  NativeJunoModule.h  NativeJunoModule.mm  Podfile  exportOptions.plist
ios/JunoNative/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  main.m
ios/JunoNative.xcodeproj/: project.pbxproj
rtn-juno-engine/android/: CMakeLists.txt
rtn-juno-engine/android/cpp/: JunoAudioEngine.cpp  JunoAudioEngine.hpp  JunoBridgeJNI.cpp
rtn-juno-engine/android/java/com/pulsr/junonative/: JunoEngineModule.java  JunoEnginePackage.java
rtn-juno-engine/cpp/dsp/: BBDChorus.hpp  NonlinearVCF.hpp
rtn-juno-engine/cpp/engine/: CMakeLists.txt  JunoDSPEngine.cpp  JunoDSPEngine.hpp  JunoVoice.cpp  JunoVoice.hpp  RCUParameterManager.cpp  RCUParameterManager.hpp
rtn-juno-engine/ios/: JunoRenderEngine.hpp  JunoRenderEngine.mm  RTNJunoEngine.h  RTNJunoEngine.mm
scripts/: compile-turbo-modules.sh  fix_xcodeproj_settings.rb  validate-package-json.js
scripts/ci/: ensure_shared_scheme.rb  fix_ios_project.rb  fix_xcodeproj.rb  generate_ios_project.rb
src/components/: AnalogCharacterPanel.tsx  Keyboard.tsx  Knob.tsx  ParamOverlay.tsx  PatchBrowser.tsx
src/hooks/: useSynthEvents.ts
src/native/: JunoModule.ts  JunoNative.ts
src/patches/: factoryPatches.ts
tests/dsp/: cpu_bench.cpp  latency_test.cpp
tests/integration/: render_consistency.cpp
